tests/errors/sem.not-in-funcdef.amp_amp.or
x := &&5;

main :: () -> void {
    x;
};
